# LeagueScout

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  riot_api.rs
src/config/: mod.rs  setup.rs
src/models/: mod.rs  riot_id.rs
src/services/: form_handler.rs  mod.rs  page_handler.rs
src/views/: index.html  player_search_form.html  search_results.html
stories/: architecture.md  user-stories.md
