[package]
name = "champ-pool-search"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] } # For async runtime
serde = { version = "1.0.213", features = [
    "derive",
] } # For JSON deserialization
dotenv = { version = "0.15.0" } # For environment vars
urlencoding = "2.1.3"
charmap = "0.2.2"
actix-web = "4.9" # For web server
actix-files = "0.6.6" # For providing functionality to html files
tera = "1.20.0" # For rendering dynamic html elements
